dropzone position fix on small devices, and some other small fixes for small devices

--- a/css/main.css
+++ b/css/main.css
@@ -394,11 +394,17 @@ ul.tmpTargetzTree {
     bottom: 0px;
     overflow-x: hidden;
     overflow-y: auto;
-    padding: 30px 20px 20px 20px;
+    padding: 1rem;
+}
+
+#document.doc-solo {
+    padding-left: 1.6rem;
 }
 
 #selectedDoc {
     margin-bottom: 2rem;
+    max-width: 100%;
+    overflow-wrap: break-word;
 }
 
 #abDoc{
@@ -624,6 +630,13 @@ padding-left: 6px;
     margin-left: 1.6rem;
     cursor: auto !important;
     z-index: 1; /*dropzone must be higher than editor to reseive dragenter events*/
+}
+
+.small-device #dropzone{
+    float: none;
+    margin-top: 1rem;
+    margin-left: 0;
+    margin-bottom: 2rem;
 }
 
 #dropzone.readonly:not(.used) {
